# v4l2-list-devices

./: CMakeLists.txt  README.md
include/: list_devices.hpp
src/: main.cpp
